host functions added

--- a/templates/manager.html
+++ b/templates/manager.html
@@ -44,6 +44,7 @@
             <input type = 'text' id = 'uid' placeholder="UID" required>
             <input type = 'text' id = 'name' placeholder="User" required>
             <input type = 'text' id = 'permission' placeholder="Permission" required>
+            <input type = 'text' id = 'host' placeholder="Host" required>
             <button type = 'submit'>Add</button>
         </form>
         <table>
@@ -52,6 +53,7 @@
                     <th>UID</th>
                     <th>User</th>
                     <th>Permissions</th>
+                    <th>Host</th>
                     <th id = 'LastUsed'>Last Used</th>
                     <th>Actions</th>
                 </tr>
