--- a/templates/overview.html
+++ b/templates/overview.html
@@ -47,6 +47,7 @@
                     <th>User</th>
                     <th>Permissions</th>
                     <th>Door</th>
+                    <th>Host</th>
                     <th>Time</th>
                 </tr>
             </thead>
