--- a/templates/users.html
+++ b/templates/users.html
@@ -51,6 +51,7 @@
                     <th>User</th>
                     <th>Permissions</th>
                     <th>Door</th>
+                    <th>Host</th>
                     <th>Time</th>
                 </tr>
             </thead>
