--- a/templates/manager.html
+++ b/templates/manager.html
@@ -55,6 +55,7 @@
                     <th>Permissions</th>
                     <th>Host</th>
                     <th id = 'LastUsed'>Last Used</th>
+                    <th>Image</th>
                     <th>Actions</th>
                 </tr>
             </thead>
