--- a/templates/manager.html
+++ b/templates/manager.html
@@ -41,7 +41,7 @@
             <a href = "{{ url_for('manager') }}">Manager</a>
             
         </div>
-        <form method = 'POST' action="{{url_for('add_cardholder')}}" id = "addForm">
+        <form id = "addForm">
             <input type = 'text' id = 'uid' placeholder="UID" required>
             <input type = 'text' id = 'name' placeholder="User" required>
             <input type = 'text' id = 'permission' placeholder="Permission" required>
